--- a/levgrossman.html
+++ b/levgrossman.html
@@ -304,7 +304,7 @@ He is also the author of the international bestseller Codex.
     <script>
       function grossmanOver(){
         const link = document.getElementById("grossman");
-        link.style.backgroundColor = "lightgreen";
+        link.style.backgroundColor = "silver";
       }
       function grossmanOut(){
         const link = document.getElementById("grossman");
