--- a/levgrossman.html
+++ b/levgrossman.html
@@ -12,19 +12,26 @@
     <style>
     #button{
       text-decoration: underline;
-      color: blue;
+      color: black;
       float: right;
+    }
+    #button:hover{
+      color: blue;
+    }
+    span{
+      font-style: italic;
     }
 
     </style>
   </head>
   <body>
    <div class="background">
-    <div class="home">
-      <a href="index.html"><img src="images/castle.png" alt="castle icon" title="Home"></a>
-    </div>
+   
 
     <div class="outer">
+      <div class="links">
+        <a href="index.html"><img class="home" src="images/castle.png" alt="castle icon" title="Home"></a>
+      </div>
       <div class="links">
           <a href="levgrossman.html"><h3 id="grossman">Lev Grossman</h3></a>
       </div>
@@ -101,7 +108,7 @@ He is also the author of the international bestseller Codex.
 
 ... on The Magicians ...
 
-“The Magicians brilliantly explores the hidden underbelly of fantasy and easy magic, taking what's simple on the surface and turning it over to show us the complicated writhing mess beneath. It's like seeing the worlds of Narnia and Harry Potter through a 3-D magnifying glass.” Naomi Novik
+“The Magicians brilliantly explores the hidden underbelly of fantasy and easy magic, taking what's simple on the surface and turning it over to show us the complicated writhing mess beneath. It's like seeing the worlds of Narnia and Harry Potter through a 3-D magnifying glass.” <span>Naomi Novik</span>
     </p>
         </td>
       </tr>
@@ -294,7 +301,7 @@ He is also the author of the international bestseller Codex.
     <script>
       function grossmanOver(){
         const link = document.getElementById("grossman");
-        link.style.backgroundColor = "silver";
+        link.style.backgroundColor = "white";
       }
       function grossmanOut(){
         const link = document.getElementById("grossman");
@@ -302,7 +309,7 @@ He is also the author of the international bestseller Codex.
       }
       function rothfussOver(){
         const link = document.getElementById("rothfuss");
-        link.style.backgroundColor = "silver"
+        link.style.backgroundColor = "white"
       }
       function rothfussOut(){
         const link = document.getElementById("rothfuss");
@@ -310,7 +317,7 @@ He is also the author of the international bestseller Codex.
       }
       function sandersonOver(){
         const link = document.getElementById("sanderson");
-        link.style.backgroundColor = "silver"
+        link.style.backgroundColor = "white"
       }
       function sandersonOut(){
         const link = document.getElementById("sanderson");
@@ -318,7 +325,7 @@ He is also the author of the international bestseller Codex.
       }
       function schwabOver(){
         const link = document.getElementById("schwab");
-        link.style.backgroundColor = "silver"
+        link.style.backgroundColor = "white"
       }
       function schwabOut(){
         const link = document.getElementById("schwab");
@@ -326,7 +333,7 @@ He is also the author of the international bestseller Codex.
       }
       function sitemapOver(){
         const link = document.getElementById("sitemap");
-        link.style.backgroundColor = "silver"
+        link.style.backgroundColor = "white"
       }
       function sitemapOut(){
         const link = document.getElementById("sitemap");
@@ -334,7 +341,7 @@ He is also the author of the international bestseller Codex.
       }
       function contactOver(){
         const link = document.getElementById("contact");
-        link.style.backgroundColor = "silver"
+        link.style.backgroundColor = "white"
       }
       function contactOut(){
         const link = document.getElementById("contact");
@@ -362,8 +369,28 @@ const h4 = document.getElementById("button")
 
 function more(){
   const p = document.getElementById("magiciansp");
- 
-  console.log(h4)
+  p.innerHTML = "The Magicians immediately appealed to my writer bones. There a great many sharply observed and cuttingly sarcastic lines. There a good few beautiful ones. Along with the Victorian sensibilities of the Brakebills school of magic Lev Grossman adopts a witty almost drawing room prose that has notes of Oscar Wilde and the later Evelyn Waugh. More recently it puts me in mind of the literary excellence of Josiah Bancroft. So the writing is top notch. The characters? The plot? All very engaging too. I have seen some reviewers make a big deal of the point of view character, Quentin Coldwater, being an unsympathetic protagonist. I really didn’t get that. The book has been called Harry Potter for grownups (it contains a magic school, what else will people call it?) and certainly Quentin is no brave-hearted, resilient hero-in-the-making in the model of young Mr Potter. He’s flawed, human, he variously feels sorry for himself, or thinks too much of himself… What part of this is not covered by “for grownups”? Quentin is someone unable to be happy. Even when given exactly what he wants. This is a part of the human condition, no rarer than blue eyes, especially in the teenage years. I enjoyed the skill with which it was shown to us and the gradual building of consequences. The supporting cast are interesting. The magic school is more of a university and so we have drinking and sex. We have rich, privileged kids affecting disaffection, forming cliques, being overbearingly intellectual. It’s all very well drawn and often amusing. It’s often genuinely clever too. I enjoyed spending time in the company of these complex characters. We rattle through the school section considerably faster than I thought we would. I think a couple of years are knocked off in a single chapter at one point. The magic is interesting too. It’s not handed over in detail, there’s no Wingardium Leviosa, but we get a strong impression of its highly technical and fiddly nature. Thankfully we don’t have to suffer through that like the students do and we get to see some flashy magic later on. So half the book is Quentin going to school and learning his trade in a Harry Potter minus Dumbledore and Voldemort style. The second half, heavily foreshadowed and linked to in the first half, involves what is an unmistakeable … let’s call it “homage” … to Narnia. It’s called Fillory in the book but we will call it what it is here. Narnia. Anyway, Quentin has been obsessed with the Narnia books since he was a small child. Narnia is where he wants to go, needs to go, will go and will find the happiness that keeps slipping through his fingers. And yes they go, via the rings (button) from the first Narnia book and the Wood Between The Worlds (now paved over with the pools converted into fountains). Narnia comes complete with fauns in the snow, a family of talking beavers, and a need to have two daughters of Eve and two sons of Adam wear the crowns and sit as kings and queens in Cair Paravel. Of course instead of the Pevensie children it is now a collection of variously drunk, messed up, twenty-one year old magicians with relationship issues, subcutaneous demons, and at least one handgun. They do have to deal with the aftermath of the Pevensie visit though. It’s all very well done and both cleverly deconstructs and goes beyond the Narnia books into its own post-CS Lewis plot that feeds nicely back into puzzling elements within the first half of the book. In short this is a really good read. More sophisticated than most genre work, which I guess is why it is sometimes cited as a “crossover” book. To my mind though it is simply very well written fantasy. Harry Potter for grownups. Plus Narnia for grownups.";
+  h4.innerHTML = "less";
+   } 
+  
+   function less(){
+     const p = document.getElementById("magiciansp");
+     p.innerHTML = "The Magicians immediately appealed to my writer bones. There a great many sharply observed and cuttingly sarcastic lines. There a good few beautiful ones. Along with the Victorian sensibilities of the Brakebills school of magic Lev Grossman adopts a witty almost drawing room prose that has...";
+     h4.innerHTML = "more";
+     window.location.href = "#magicians";
+   }
+   
+
+   document.getElementById("button").onclick = function(){
+    if(h4.innerText == "more"){
+     more();
+   } else {
+     less();
+   }
+  }
+
+  function more(){
+  const p = document.getElementById("magiciansp");
   p.innerHTML = "The Magicians immediately appealed to my writer bones. There a great many sharply observed and cuttingly sarcastic lines. There a good few beautiful ones. Along with the Victorian sensibilities of the Brakebills school of magic Lev Grossman adopts a witty almost drawing room prose that has notes of Oscar Wilde and the later Evelyn Waugh. More recently it puts me in mind of the literary excellence of Josiah Bancroft. So the writing is top notch. The characters? The plot? All very engaging too. I have seen some reviewers make a big deal of the point of view character, Quentin Coldwater, being an unsympathetic protagonist. I really didn’t get that. The book has been called Harry Potter for grownups (it contains a magic school, what else will people call it?) and certainly Quentin is no brave-hearted, resilient hero-in-the-making in the model of young Mr Potter. He’s flawed, human, he variously feels sorry for himself, or thinks too much of himself… What part of this is not covered by “for grownups”? Quentin is someone unable to be happy. Even when given exactly what he wants. This is a part of the human condition, no rarer than blue eyes, especially in the teenage years. I enjoyed the skill with which it was shown to us and the gradual building of consequences. The supporting cast are interesting. The magic school is more of a university and so we have drinking and sex. We have rich, privileged kids affecting disaffection, forming cliques, being overbearingly intellectual. It’s all very well drawn and often amusing. It’s often genuinely clever too. I enjoyed spending time in the company of these complex characters. We rattle through the school section considerably faster than I thought we would. I think a couple of years are knocked off in a single chapter at one point. The magic is interesting too. It’s not handed over in detail, there’s no Wingardium Leviosa, but we get a strong impression of its highly technical and fiddly nature. Thankfully we don’t have to suffer through that like the students do and we get to see some flashy magic later on. So half the book is Quentin going to school and learning his trade in a Harry Potter minus Dumbledore and Voldemort style. The second half, heavily foreshadowed and linked to in the first half, involves what is an unmistakeable … let’s call it “homage” … to Narnia. It’s called Fillory in the book but we will call it what it is here. Narnia. Anyway, Quentin has been obsessed with the Narnia books since he was a small child. Narnia is where he wants to go, needs to go, will go and will find the happiness that keeps slipping through his fingers. And yes they go, via the rings (button) from the first Narnia book and the Wood Between The Worlds (now paved over with the pools converted into fountains). Narnia comes complete with fauns in the snow, a family of talking beavers, and a need to have two daughters of Eve and two sons of Adam wear the crowns and sit as kings and queens in Cair Paravel. Of course instead of the Pevensie children it is now a collection of variously drunk, messed up, twenty-one year old magicians with relationship issues, subcutaneous demons, and at least one handgun. They do have to deal with the aftermath of the Pevensie visit though. It’s all very well done and both cleverly deconstructs and goes beyond the Narnia books into its own post-CS Lewis plot that feeds nicely back into puzzling elements within the first half of the book. In short this is a really good read. More sophisticated than most genre work, which I guess is why it is sometimes cited as a “crossover” book. To my mind though it is simply very well written fantasy. Harry Potter for grownups. Plus Narnia for grownups.";
   h4.innerHTML = "less";
    } 
