--- a/brandonsanderson.html
+++ b/brandonsanderson.html
@@ -9,35 +9,35 @@
     <title>Brandon Sanderson</title>
     <link rel="stylesheet" type="text/css" href="styles/body.css">
     <link rel="stylesheet" type="text/css" href="styles/header.css">
+    <link rel="icon" href="images/favicon.png">
     <style>
       
     </style>
   </head>
   <body>
-    <div class="home">
-        <a href="index.html"><img src="images/castle.png" alt="castle icon" title="Home"></a>
+    <div class="outer">
+      <div class="links">
+        <a href="index.html"><img id= "castle" class="home" src="images/castle.png" alt="castle icon" title="Home"></a>
+      </div>
+      <div class="links">
+          <a href="levgrossman.html"><h3 id="grossman">Lev Grossman</h3></a>
+      </div>
+      <div class="links">
+          <a href="patrickrothfuss.html"><h3 id="rothfuss">Patrick Rothfuss</h3></a>
     </div>
-  
-      <div class="outer">
-        <div class="links">
-            <a href="levgrossman.html"><h3 id="grossman">Lev Grossman</h3></a>
-        </div>
-        <div class="links">
-            <a href="patrickrothfuss.html"><h3 id="rothfuss">Patrick Rothfuss</h3></a>
-      </div>
-      <div class="links">
-            <a href="brandonsanderson.html"><h3 id="sanderson">Brandon Sanderson</h3></a>
-      </div>
-      <div class="links">
-            <a href="veschwab.html"><h3 id="schwab">V.E. Schwab</h3></a>
-      </div>
-      <div class="links">
-            <a href="sitemap.html"><h3 id="sitemap">Sitemap</h3></a>
-      </div>
-      <div class="links">
-            <a href="contact.html"><h3 id="contact">Contact</h3></a>
-      </div>
-      </div>
+    <div class="links">
+          <a href="brandonsanderson.html"><h3 id="sanderson">Brandon Sanderson</h3></a>
+    </div>
+    <div class="links">
+          <a href="veschwab.html"><h3 id="schwab">V.E. Schwab</h3></a>
+    </div>
+    <div class="links">
+          <a href="sitemap.html"><h3 id="sitemap">Sitemap</h3></a>
+    </div>
+    <div class="links">
+          <a href="contact.html"><h3 id="contact">Contact</h3></a>
+    </div>
+    </div>
 <a id="sanderson"></a>
 <table>
   <tr>
@@ -406,7 +406,7 @@
 <script>
   function grossmanOver(){
     const link = document.getElementById("grossman");
-    link.style.backgroundColor = "silver";
+    link.style.backgroundColor = "white";
   }
   function grossmanOut(){
     const link = document.getElementById("grossman");
@@ -414,7 +414,7 @@
   }
   function rothfussOver(){
     const link = document.getElementById("rothfuss");
-    link.style.backgroundColor = "silver"
+    link.style.backgroundColor = "white"
   }
   function rothfussOut(){
     const link = document.getElementById("rothfuss");
@@ -422,7 +422,7 @@
   }
   function sandersonOver(){
     const link = document.getElementById("sanderson");
-    link.style.backgroundColor = "silver"
+    link.style.backgroundColor = "white"
   }
   function sandersonOut(){
     const link = document.getElementById("sanderson");
@@ -430,7 +430,7 @@
   }
   function schwabOver(){
     const link = document.getElementById("schwab");
-    link.style.backgroundColor = "silver"
+    link.style.backgroundColor = "white"
   }
   function schwabOut(){
     const link = document.getElementById("schwab");
@@ -438,7 +438,7 @@
   }
   function sitemapOver(){
     const link = document.getElementById("sitemap");
-    link.style.backgroundColor = "silver"
+    link.style.backgroundColor = "white"
   }
   function sitemapOut(){
     const link = document.getElementById("sitemap");
@@ -446,7 +446,7 @@
   }
   function contactOver(){
     const link = document.getElementById("contact");
-    link.style.backgroundColor = "silver"
+    link.style.backgroundColor = "white"
   }
   function contactOut(){
     const link = document.getElementById("contact");
@@ -470,6 +470,16 @@
   document.getElementById("contact").onmouseover= contactOver;
   document.getElementById("contact").onmouseout= contactOut;
 
+  function whitecastle() {
+      const castle = document.getElementById("castle");
+      castle.src = "images/whitecastle.png"
+    }
+    function blackcastle() {
+      const castle = document.getElementById("castle");
+      castle.src = "images/castle.png"
+    }
+    document.getElementById("castle").onmouseover = whitecastle;
+    document.getElementById("castle").onmouseout = blackcastle;
 
 
 </script>
