grammar and spelling mistake fixes

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div id="center">
       <h1>Great Fantasy & Sci-Fi Recommendations</h1>
       <p id="txt">
-        I'm here to recommend my favorite fantasy and sc-fi authors, so you can
+        Recommending my favorite fantasy and sci-fi authors so you can
         find your next great adventure.
       </p>
     </div>
